# todoist-testing

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.py  index.html  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
52/: index.html
52/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
52/export/: influxDbData.txt  prometheusData.txt
52/history/: history-trend.json  history.json
52/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  summary.json
53/: index.html
54/: index.html
55/: index.html
56/: index.html
57/: index.html
58/: index.html
59/: index.html
60/: index.html
61/: index.html
62/: index.html
63/: index.html
64/: index.html
65/: index.html
66/: index.html
67/: index.html
68/: index.html
Collections/: Todoist.postman_collection.json  test_env.postman_environment.json
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
export/: influxDbData.txt  prometheusData.txt
factories/: page_factory.py
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: login_page.py  new_project_page.py  new_task_page.py  project_page.py  task_page.py
todoist_client/: base_client.py  projects_client.py  task_client.py
todoist_requests/: todoist_requests.py
widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
(+1190 files in other folders)
