[tool.poetry]
name = "todoist-test"
version = "0.1.0"
description = ""
authors = ["Sabina Cebreroz Silva <sabina.cebreroz@elektra.com.mx>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.24.0"
behave = "^1.2.6"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
faker = "^29.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
load_dotenv = "dotenv:load_dotenv"
check_code = "black . && mypy ."

[tool.black]
line-length = 88
