[tool.poetry]
name = "todoist-test"
version = "0.1.0"
description = ""
authors = ["Sabina Cebreroz Silva <sabina.cebreroz@wizeline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.24.0"
behave = "^1.2.6"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
faker = "^29.0.0"
allure-behave = "^2.13.5"
matplotlib = "^3.9.2"
slack-sdk = "^3.33.4"
fonttools = "^4.55.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
pre-commit = "^3.8.0"
types-requests = "^2.32.0.20240914"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
load_dotenv = "dotenv:load_dotenv"

[tool.black]
line-length = 88

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
strict = true
warn_unreachable = true
